# ci-gwas

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  bed_lut.h  ci-gwas.py  cuPC-S.cu  cuPC-S.h  kendall.cu  kendall.h  main.cpp
apps/: CMakeLists.txt  main.cpp  mps.cpp
corr/: compressed.cu  compressed.h  expanded.cu  kendall.cu
cuPC/: cuPC-S.cu
cusk/: CMakeLists.txt
cusk/apps/: CMakeLists.txt  mps.cpp
cusk/include/mps/: bed_lut.h  bed_lut_gpu.h  bim.h  blocking.h  cli.h  corr_compressed.h  corr_kernels.h  cuPC-S.h  cuPC_call_prep.h  gpuerrors.h  hetcor-cuPC-S.h  io.h  marker_block.h  marker_summary_stats.h  marker_trait_summary_stats.h  mps.h  parent_set.h  phen.h  prep.h  trait_summary_stats.h
cusk/include/test_data/: bed_marker_test_set.h  corr_test_set.h  cupc_test_set.h
cusk/py-vis/: vis.py
cusk/scripts/: bdpc.py  skeleton_gen.py
cusk/src/: CMakeLists.txt  blocking.cpp  cli.cpp  cuPC-S-second-stage.cu  cuPC-S-second-state.cu  cuPC-S.cu  cuPC_call_prep.cpp  cu_test_helpers.cu  hetcor-cuPC-S.cu  io.cpp  marker_summary_stats.cpp  marker_trait_summary_stats.cpp  parent_set.cpp  prep.cpp  trait_summary_stats.cpp
cusk/tests/: CMakeLists.txt  blocking_tests.cpp  corr_tests.cpp  cupc_tests.cpp  cuskss_tests.cpp  hetcor_cupc_tests.cpp  io_tests.cpp  parents_tests.cpp
cusk/tests/test_files/: blocks.txt  distance.bim  marker_trait_summary_stats.txt  small.bim  small.fam  small.phen  test.blocks  test.mtx  with_nan.phen  wrong_magic_num_two.bed
cusk_postprocessing/: check_mr_assumptions.py  merge_blocks.py  mr.py  run_sepselect.py  sepselect.py
include/mps/: bed_dims.h  bed_lut.h  bfiles_base.h  bim.h  bim_stats.h  blocking.h  corr_compressed.h  corr_expanded.h  corr_host.h  corr_kernels.h  cuPC-S-sparse.h  cuPC-S.h  cuPC_call_prep.h  cu_test_helpers.h  io.h  marker_block.h  marker_summary_stats.h  marker_trait_summary_stats.h  parent_set.h  phen.h  prep.h  prep_markers.h  trait_summary_stats.h
include/test_data/: bed_marker_test_set.h  blocking_test_set.h  cupc_test_set.h  parent_set_test_set.h
mvivw/: check_mr_assumptions.py  cig_mvivw.R  cig_mvivw_filtered.R  cig_mvivw_filtered.r
preprocess/: markers.cpp
py-vis/: vis.py
rfci/: CIGWAS_est_PAG.R
scripts/: bdpc.py  phen_prep.py
sdavs/: CIGWAS_est_ACE.R  DAVS_functions_final.R
sepselect/: merge_blocks.py  sepselect.py
simulation/: MRfunctions.R  run_mr.R  run_mr_ukb.R  simulate_dag.R  simulate_dag_ukb.R
src/: CMakeLists.txt  bim.cpp  bim_stats.cpp  blocking.cpp  corr_compressed.cu  corr_expanded.cu  corr_host.cu  corr_kernels.cu  cuPC-S-sparse.cu  cuPC-S.cu  cuPC_call_prep.cpp  cu_test_helpers.cu  io.cpp  marker_summary_stats.cpp  marker_trait_summary_stats.cpp  parent_set.cpp  phen.cpp  prep.cpp  prep_markers.cpp  trait_summary_stats.cpp
srfci/: CIGWAS_est_PAG.R  CIGWAS_est_PAG_simulations.R  RFCI_functions_final.R
test_data/: bed_marker_test_set.h
tests/: CMakeLists.txt  blocking_tests.cpp  corr_tests.cpp  cupc_tests.cpp  io_tests.cpp  parents_tests.cpp  prep_tests.cpp
tests/test_files/: 1_marker_corrk.txt  small.bed  test.blocks  test.mtx  trait_summary_stats.txt  wrong_magic_num_one.bed  wrong_magic_num_three.bed
